remove auth validation update doc
